fix(ui): fix succor bleeding into other items, shrink text slightly
closes #220

--- a/client/src/app/_shared/components/item/item.component.scss
+++ b/client/src/app/_shared/components/item/item.component.scss
@@ -35,7 +35,7 @@ img {
   position: absolute;
   color: #000;
   text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
-  font-size: 1rem;
+  font-size: 0.9rem;
   z-index: 560;
   font-weight: bold;
   user-select: none;
